core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/forkjoin.yf
---
name: forkjoin
graphs:
  start:
    - type: ForkJoin
      forkTargets: [A,B]
      targetToKeys:
        A: { keyfroma: keyfroma }
        B: { keyfromb: keyfromb }

    - type: StringContains
      regex: ""
      content: "{keyfroma}" # content :: String

  A:
    - type: Echo
      put: keyfroma
      value: "1"

  B:
    - type: Echo
      put: keyfromb
      value: "1"


