core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin2.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoin
      list: [A,B]
      mapTarget: X
      keys:
        key: key

    - type: StringContains
      regex: ""
      content: "{keyfromx}" # content :: String

  X:
    - type: Echo
      put: key
      value: "1"


